--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -548,9 +548,9 @@ Contextual User Interfaces based on Transient (aka magit interface)
 *** casual-editkit
 User interface library for Emacs editing commands.
 #+begin_src emacs-lisp
-  (use-package casual-editkit
-    :ensure nil
-    :bind (("<f2>" . casual-editkit-main-tmenu)))
+  ;; (use-package casual-editkit
+  ;;       :ensure nil
+  ;;       :bind (("<f2>" . casual-editkit-main-tmenu)))
 #+end_src
 
 * Key Bindings
@@ -2253,11 +2253,14 @@ will appear as projects.
 
 ** Agenda
 *** Agenda configuration
+:PROPERTIES:
+:ID:       6bcba8de-f453-4aab-9a9e-64e648678604
+:END:
 By default all files in GTD and journal folder will be in my agenda, to be searchable
 
 #+begin_src emacs-lisp
 ;; My Org agenda-files
-(defvar nc/org-agenda-files (list "~/notes/gtd.org" "~/notes/someday.org" "~/notes/personal/calendar.org" "~/notes/journal/"))
+(defvar nc/org-agenda-files (list "~/notes/gtd.org" "~/notes/projects.org" "~/notes/someday.org" "~/notes/personal/calendar.org" "~/notes/journal/"))
 #+end_src
 
 
