GTD2025 :: Update Agenda Commands

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -2129,7 +2129,7 @@ will appear as projects.
        '(("p" "Personal")
          ("pp" "Project" entry
           (file nc/org-projects-file)
-          "* %^{ProjectName}\nDEADLINE: %^t\n:PROPERTIES:\n:STARTDATE: %U\n:CATEGORY: %^{category}\n:END:\n %?")
+          "* %^{ProjectName} :project:\nDEADLINE: %^t\n:PROPERTIES:\n:STARTDATE: %U\n:CATEGORY: %^{category}\n:END:\n %?")
          ("pt" "Todo" entry
           (file nc/org-projects-file)
           "* TODO %?" :refile-targets ((nil :maxlevel . 1))
@@ -2137,7 +2137,7 @@ will appear as projects.
          ("o" "@office")
          ("op" "Project" entry
           (file nc/org-office-file)
-          "* %^{ProjectName}\nDEADLINE: %^t\n:PROPERTIES:\n:STARTDATE: %U\n:CATEGORY: %^{category}\n:END:\n %?")
+          "* %^{ProjectName}:project:\nDEADLINE: %^t\n:PROPERTIES:\n:STARTDATE: %U\n:CATEGORY: %^{category}\n:END:\n %?")
          ("ot" "Todo" entry
           (file nc/org-office-file)
           "* TODO %?" :refile-targets ((nil :maxlevel . 1))
@@ -2174,7 +2174,7 @@ will appear as projects.
  #+begin_src emacs-lisp
    (add-to-list 'org-capture-templates
                     `("m" "Meeting" entry  (file+headline nc/calendar-file "Réunions")
-           ,(concat "* MEETING %? :meeting:\n"
+           ,(concat "* MEETING 📆 %? :meeting:\n"
                     "<%<%Y-%m-%d %a %H:00-%H:30>>")))
  #+end_src
 *** TODO RendezVous
@@ -2304,73 +2304,80 @@ Setting =org-agenda-file-regexp= to include all numeric files (journal files)
 **** Display Header parent
 
  #+begin_src emacs-lisp
-   (defun nc--org-agenda-display-title ()
-     "Display org title if necessary"
-     (save-excursion
-       (save-restriction
-        (widen) 
-        (let* ((heading (org-get-heading t t)))
-          (if (s-starts-with? "Tasks" heading)
-              (s-concat "\n" (org-get-title) " - ")
-            "")))))
+ (defun nc--org-agenda-display-title ()
+   "Display org title if necessary"
+   (save-excursion
+     (save-restriction
+      (widen) 
+      (let* ((heading-tags (org-get-tags)))
+        (if (seq-contains-p heading-tags "project")
+            (s-concat "\n"  " 🏗️ ")
+          "")))))
  #+end_src
 **** Agenda Commands
 
      #+begin_src emacs-lisp
-       (require 'org-agenda)
+     (require 'org-agenda)
 
-       (setq org-agenda-custom-commands
-             '(("," "Agenda"
-                ((agenda "" ((org-agenda-sorting-strategy '(timestamp-up time-up priority-down category-keep))
-                             (org-agenda-prefix-format " %i %-20:c%?-12t% s")))
+     (setq org-agenda-custom-commands
+           '(("," "Agenda"
+              ((agenda "" ((org-agenda-sorting-strategy '(timestamp-up time-up priority-down category-keep))
+                           (org-agenda-prefix-format " %i %-20:c%?-12t% s")))
 
-                       (tags-todo "TODO=\"STARTED\""
-                                  ((org-agenda-overriding-header "\nStarted Tasks")
-                                   (org-agenda-prefix-format " %i %-20:c [%e] ")
-                                   ;;(org-agenda-prefix-format "%-27:(nc--org-agenda-format-parent 25)")
-                                   (org-agenda-sorting-strategy '(priority-down todo-state-up category-keep))))
-                       (tags-todo "TODO=\"NEXT\""
-                                  ((org-agenda-overriding-header "\nNext Tasks")
-                                   (org-agenda-prefix-format " %i %-20:c [%e] ")
-                                   (org-agenda-skip
-                                    '(org-agenda-skip-if 'deadline))
-                                   ;;(org-agenda-files '("~/_PIM/notes/gtd.org"))
-                                   (org-agenda-sorting-strategy '(priority-down todo-state-up category-keep))))
-                       (tags-todo "inbox"
-                            ((org-agenda-prefix-format "  %?-12t% s")
-                             (org-agenda-overriding-header "\nInbox")))
-                       (tags-todo "TODO=\"HOLD\""
-                                  ((org-agenda-overriding-header "\nHold / Waiting Tasks")
-                                   (org-agenda-prefix-format " %i %-20:c")                            
-                                   (org-agenda-sorting-strategy '(priority-down todo-state-up category-keep))))
-                       )
-                      nil)
-               ("g" . "GTD contexts")
-                  ("go" "Office" tags-todo "@office")
-                  ("gp" "Personal" tags-todo "personal")
-                  ("ge" "Emacs" tags-todo "emacs")
-                  ("gl" "Learning" tags-todo "learning")
-                  ("gr" "Reading" tags-todo "@reading")
-                   ;; exports block to this file with C-c a e
-                 ;; ..other commands here
-                  ("p" . "Projects")
-                  ("po" "Office Projects"
-                   ((tags "project+@office|@office+LEVEL=2+TODO=\"TODO\""
-                          (;; (org-agenda-files (nc/org-projects-file))
-                           ;; (org-agenda-prefix-format " %-20c %l%e%l %27:(nc--org-agenda-display-title)")
+                     (tags "@office+TODO=\"STARTED\""
+                                ((org-agenda-overriding-header "\n:office: Started Tasks @office")
+                                 (org-agenda-prefix-format " %i %-20:c [%e] ")
+                                 ;;(org-agenda-prefix-format "%-27:(nc--org-agenda-format-parent 25)")
+                                 (org-agenda-sorting-strategy '(priority-down todo-state-up category-keep))))
+                     (tags "@office+TODO=\"NEXT\""
+                                ((org-agenda-overriding-header "\n:office: Next Tasks @office")
+                                 (org-agenda-prefix-format " %i %-20:c [%e] ")
+                                 (org-agenda-skip
+                                  '(org-agenda-skip-if 'deadline))
+                                 ;;(org-agenda-files '("~/_PIM/notes/gtd.org"))
+                                 (org-agenda-sorting-strategy '(priority-down todo-state-up category-keep))))
+                     (tags-todo "inbox"
+                          ((org-agenda-prefix-format "  %?-12t% s")
+                           (org-agenda-overriding-header "\n▶️ Inbox")))
+                     (tags "personal+TODO=\"STARTED\"|personal+TODO=\"NEXT\""
+                                ((org-agenda-overriding-header "\n:house: My current tasks")
+                                 (org-agenda-prefix-format " %i %-20:c [%e] ")
+                                 (org-agenda-skip
+                                  '(org-agenda-skip-if 'deadline))
+                                 ;;(org-agenda-files '("~/_PIM/notes/gtd.org"))
+                                 (org-agenda-sorting-strategy '(priority-down todo-state-down category-keep))))
+                     (tags-todo "TODO=\"HOLD\""
+                                ((org-agenda-overriding-header "\n⌛ Hold / Waiting Tasks")
+                                 (org-agenda-prefix-format " %i %-20:c")                            
+                                 (org-agenda-sorting-strategy '(priority-down todo-state-up category-keep))))
+                     )
+                    nil)
+             ("g" . "GTD contexts")
+                ("go" "Office" tags-todo "@office")
+                ("gp" "Personal" tags-todo "personal")
+                ("ge" "Emacs" tags-todo "emacs")
+                ("gl" "Learning" tags-todo "learning")
+                ("gr" "Reading" tags-todo "@reading")
+                 ;; exports block to this file with C-c a e
+               ;; ..other commands here
+                ("p" . "Projects")
+                ("po" "Office Projects"
+                 ((tags "project+@office|@office+LEVEL=2+TODO=\"TODO\""
+                        (;; (org-agenda-files (nc/org-projects-file))
+                         ;; (org-agenda-prefix-format " %-20c %l%e%l %27:(nc--org-agenda-display-title)")
 
-                           (org-agenda-prefix-format "%l%l %:(nc--org-agenda-display-title)")
-                           (org-agenda-sorting-strategy '(priority-down))
-                           (org-agenda-overriding-header "Office Projects")))))
-                  ("pp" "My Personal Projects"
-                   ((tags "project+personal|personal+LEVEL=2+TODO=\"TODO\""
-                          (;; (org-agenda-files (list nc/org-projects-file))
-                           ;;(org-agenda-prefix-format " %-20c %l%e%l")
-                           (org-agenda-prefix-format "%l%l %:(nc--org-agenda-display-title)")
-                           (org-agenda-sorting-strategy '(priority-down))
-                           (org-agenda-overriding-header "Personal Projects")
-                           ))))
-                  ))
+                         (org-agenda-prefix-format "%l%l %:(nc--org-agenda-display-title)")
+                         (org-agenda-sorting-strategy '(priority-down))
+                         (org-agenda-overriding-header "Office Projects")))))
+                ("pp" "My Personal Projects"
+                 ((tags "project+personal|personal+LEVEL=2+TODO=\"TODO\""
+                        (;; (org-agenda-files (list nc/org-projects-file))
+                         ;;(org-agenda-prefix-format " %-20c %l%e%l")
+                         (org-agenda-prefix-format "%l%l %:(nc--org-agenda-display-title)")
+                         (org-agenda-sorting-strategy '(priority-down))
+                         (org-agenda-overriding-header "Personal Projects")
+                         ))))
+                ))
      #+end_src
 *** Recent open loops
 
